fixed z-index of the borders

--- a/portfolio/client/src/components/Border/style.css
+++ b/portfolio/client/src/components/Border/style.css
@@ -3,6 +3,7 @@
 	position: fixed;
 	animation: fadeInAnimation ease 1.5s;
 	animation-iteration-count: 1;
+	z-index: 2;
 	}
 	#left, #right {
 		top: 0; bottom: 0;
